fix: stop the Hodge diamond card overflowing in Bootstrap 5
The -1.25rem margin matched Bootstrap 4's card padding; Bootstrap 5 uses 1rem.

--- a/static/css/entry.css
+++ b/static/css/entry.css
@@ -15,7 +15,7 @@ a.next:after {
 div.diamond,
 div.parallelogram
 {
-  margin: 0 -1.25rem;
+  margin: 0 -1rem;
   text-align: center;
 }
 
